--- a/lesson4/lesson4_1.ipynb
+++ b/lesson4/lesson4_1.ipynb
@@ -40,6 +40,117 @@
    "source": [
     "**eval指根據輸入的值，決定是int或float**"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "學生的分數:300\n"
+     ]
+    }
+   ],
+   "source": [
+    "#學生總分最高為300\n",
+    "#如果分數超過300,就以300分為準\n",
+    "#有些學生可以加分5%\n",
+    "scores = eval(input('請輸入學生分數(最高300分):'))\n",
+    "if(scores > 300):\n",
+    "    scores = 300\n",
+    "is_add = input(\"學生是否符合加分條件?(y,n)\")\n",
+    "if is_add == 'y': #巢狀判斷\n",
+    "    scores *= 1.05\n",
+    "    if scores > 300:\n",
+    "        scores = 300\n",
+    "print(f\"學生的分數:{scores:.0f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**巢狀判斷指if中的if，若兩個都成立，則執行兩個**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "發生錯誤\n",
+      "錯誤是:無法處理\n"
+     ]
+    }
+   ],
+   "source": [
+    "#處理錯誤try...except...else..finally\n",
+    "#優雅的失敗\n",
+    "#輸出是何種錯誤\n",
+    "\n",
+    "try:\n",
+    "    raise Exception('無法處理')\n",
+    "except Exception as e:\n",
+    "    print(\"發生錯誤\")\n",
+    "    print(f\"錯誤是:{e}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "沒有錯誤\n"
+     ]
+    }
+   ],
+   "source": [
+    "#處理錯誤try...except...else..finally\n",
+    "#優雅的失敗\n",
+    "#輸出是何種錯誤\n",
+    "#else -> 沒有發生錯誤,執行的程式區塊\n",
+    "\n",
+    "try:\n",
+    "    #raise Exception('無法處理')\n",
+    "    pass\n",
+    "except Exception as e:\n",
+    "    print(\"發生錯誤\")\n",
+    "    print(f\"錯誤是:{e}\")\n",
+    "else:\n",
+    "    print('沒有錯誤')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "目前發生錯誤:invalid decimal literal (<string>, line 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    money = eval(input(\"請輸入金額:\"))\n",
+    "    print(money)\n",
+    "except Exception as e:\n",
+    "    print(f'目前發生錯誤:{e}')"
+   ]
   }
  ],
  "metadata": {
