--- a/lesson4/lesson4_homework.ipynb
+++ b/lesson4/lesson4_homework.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- BMI計算器的練習"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -38,16 +45,9 @@
     "        print('您的體重：過輕')\n",
     "\n",
     "except SyntaxError:\n",
-    "    print(\"輸入格式錯誤\")\n",
+    "    print('輸入格式錯誤')\n",
     "except Exception:\n",
-    "    print(\"不知名的錯誤\")    "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- BMI計算器的練習"
+    "    print('不知名的錯誤')    "
    ]
   }
  ],
