--- a/lesson4/lesson4_homework.ipynb
+++ b/lesson4/lesson4_homework.ipynb
@@ -9,17 +9,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "請輸入身高(公分):167\n",
-      "請輸入體重(公斤):76\n",
-      "您的BMI值:27.25\n",
-      "您的體重：輕度肥胖\n"
+      "請輸入身高(公分):158\n",
+      "請輸入體重(公斤):59\n",
+      "您的BMI值:23.63\n",
+      "您的體重：正常\n"
      ]
     }
    ],
@@ -27,7 +27,7 @@
     "try:\n",
     "    height=eval(input('請輸入身高(公分):'))\n",
     "    weight=eval(input('請輸入體重(公斤):'))\n",
-    "    BMI=weight/(hight/100)**2\n",
+    "    BMI=weight/(height/100)**2\n",
     "    print(f'請輸入身高(公分):{height}')\n",
     "    print(f'請輸入體重(公斤):{weight}')\n",
     "    print(f'您的BMI值:{BMI:.2f}')\n",
@@ -47,7 +47,7 @@
     "except SyntaxError:\n",
     "    print('輸入格式錯誤')\n",
     "except Exception:\n",
-    "    print('不知名的錯誤')    "
+    "    print('不知名的錯誤')"
    ]
   }
  ],
