--- a/lesson5/lesson5_1.ipynb
+++ b/lesson5/lesson5_1.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "-巢狀判斷 (一個判斷式裡，還有另外n 個判斷)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -23,6 +30,91 @@
     "    else:\n",
     "        bonus = 500\n",
     "elif math == 100:\n",
+    "    bonus = 500\n",
+    "else:\n",
+    "    bonus = 0\n",
+    "\n",
+    "print(f\"獎金:{bonus}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "-對比使用not"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "可以考駕照\n"
+     ]
+    }
+   ],
+   "source": [
+    "age = 19\n",
+    "\n",
+    "if  age >= 18:\n",
+    "    print(\"可以考駕照\")\n",
+    "else:\n",
+    "    print(\"不可以考駕照\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "可以考駕照\n"
+     ]
+    }
+   ],
+   "source": [
+    "age = 19\n",
+    "#not功能,True和Fasle程式區塊對調\n",
+    "if not age >= 18:\n",
+    "    print(\"不可以考駕照\")\n",
+    "else:\n",
+    "    print(\"可以考駕照\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "-邏輯判斷"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "獎金:500\n"
+     ]
+    }
+   ],
+   "source": [
+    "chinese = int(input(\"請輸入國文分數\"))\n",
+    "math = int(input(\"請輸入數學分數\"))\n",
+    "#邏輯判斷\n",
+    "if chinese == 100 and math == 100:\n",
+    "    bonus = 1000\n",
+    "elif chinese == 100 or math == 100:\n",
     "    bonus = 500\n",
     "else:\n",
     "    bonus = 0\n",
