--- a/lesson5/lesson5_1.ipynb
+++ b/lesson5/lesson5_1.ipynb
@@ -121,6 +121,55 @@
     "\n",
     "print(f\"獎金:{bonus}\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "-兩種寫法"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "正常\n"
+     ]
+    }
+   ],
+   "source": [
+    "press = int(input(\"請輸入血壓值:\"))\n",
+    "if press >= 90 and press <= 120:\n",
+    "    print(\"正常\")\n",
+    "else:\n",
+    "    print(\"不正常\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "不正常\n"
+     ]
+    }
+   ],
+   "source": [
+    "press = int(input(\"請輸入血壓值:\"))\n",
+    "if 90 <= press <= 120:\n",
+    "    print(\"正常\")\n",
+    "else:\n",
+    "    print(\"不正常\")"
+   ]
   }
  ],
  "metadata": {
