--- a/lesson5/lesson5_1.ipynb
+++ b/lesson5/lesson5_1.ipynb
@@ -170,6 +170,22 @@
     "else:\n",
     "    print(\"不正常\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "-內建函式 range\n",
+    "range(stop)\n",
+    "range(start, stop, step=1) 第3值若無則設為default,step為起始值-查一下"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
