--- a/lesson6/lesson6_0.ipynb
+++ b/lesson6/lesson6_0.ipynb
@@ -1,34 +1,10 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10的因數是: 1 2 5 10 "
-     ]
-    }
-   ],
    "source": [
-    "try:\n",
-    "\n",
-    "    x=int(input('請輸入整數'))\n",
-    "\n",
-    "    print(f'{x}的因數是:',end=' ')\n",
-    "\n",
-    "    for i in range(1,x+1):\n",
-    "\n",
-    "        if(x%i==0):\n",
-    "\n",
-    "            print(i,end=' ')\n",
-    "\n",
-    "except:\n",
-    "    \n",
-    "    print('輸入格式錯誤') "
+    "-老師解說lesson5回家作業的範例"
    ]
   },
   {
