--- a/lesson7/lesson7_2.ipynb
+++ b/lesson7/lesson7_2.ipynb
@@ -280,6 +280,59 @@
     "print(\"==========\")\n",
     "print_all(1,2,3,4,5,one='1',two='2',three='3')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "-學引數值重點在於要看懂說明書"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "================\n",
+      "\n",
+      "\n",
+      "\n",
+      "==================\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"================\")\n",
+    "print()\n",
+    "print()\n",
+    "print()\n",
+    "print(\"==================\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 3 4 5\n",
+      "==============\n",
+      "1,2,3,4,5\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(1, 2, 3, 4, 5)\n",
+    "print(\"==============\")\n",
+    "print(1, 2, 3, 4, 5, sep=',')"
+   ]
   }
  ],
  "metadata": {
