--- a/lesson7/lesson7_5.ipynb
+++ b/lesson7/lesson7_5.ipynb
@@ -69,6 +69,34 @@
     "    print(code[key])\n",
     "    print(\"=============\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tw\n",
+      "Taiwan\n",
+      "==============\n",
+      "jp\n",
+      "Japan\n",
+      "==============\n",
+      "hk\n",
+      "Hong kong\n",
+      "==============\n"
+     ]
+    }
+   ],
+   "source": [
+    "for key,value in code.items():\n",
+    "    print(key)\n",
+    "    print(value)\n",
+    "    print(\"==============\")"
+   ]
   }
  ],
  "metadata": {
