--- a/lesson8/lesson8_1.ipynb
+++ b/lesson8/lesson8_1.ipynb
@@ -420,6 +420,41 @@
     "student_names = random.choices(names,k=5)\n",
     "student_names"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "def get_names(nums:int=2)->list[str]:\n",
+    "    with open('names.txt',encoding='utf-8',mode='r') as file:\n",
+    "        names_str = file.read()\n",
+    "    names:list[str] = names_str.split(sep='\\n')\n",
+    "    names = random.choices(names,k=nums)\n",
+    "    return names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['黃佩玲', '胡芳瑜', '杜明延', '吳俐芷', '趙家豪', '鄧淑娟', '翁均安', '陳倩潔', '錢佩豪', '黃江旭']"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_names(nums=10)"
+   ]
   }
  ],
  "metadata": {
