--- a/lesson8/lesson8_3.ipynb
+++ b/lesson8/lesson8_3.ipynb
@@ -158,6 +158,14 @@
     "students = generate_students(names=student_names)\n",
     "students"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "GOOGLE：online json Viewer\\\n",
+    "jsonviewer.stack.hu"
+   ]
   }
  ],
  "metadata": {
