--- a/lesson10/lesson10_2.ipynb
+++ b/lesson10/lesson10_2.ipynb
@@ -2089,6 +2089,18 @@
     "    del site['不要']\n",
     "    print(site)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('aqi.csv',mode='w',encoding='utf-8',newline='') as file:\n",
+    "    dict_writer = csv.DictWriter(file,fieldnames=['sitename','county','aqi','status','pm2.5','datacreationdate','longitude','latitude'])\n",
+    "    dict_writer.writeheader()\n",
+    "    dict_writer.writerows(datas)"
+   ]
   }
  ],
  "metadata": {
