--- a/lesson18/lesson18_0.ipynb
+++ b/lesson18/lesson18_0.ipynb
@@ -337,6 +337,395 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>台積電</th>\n",
+       "      <th>聯電</th>\n",
+       "      <th>聯發科</th>\n",
+       "      <th>鴻海</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2001-07-23</th>\n",
+       "      <td>19.903187</td>\n",
+       "      <td>11.343294</td>\n",
+       "      <td>27.977854</td>\n",
+       "      <td>15.367785</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2001-07-24</th>\n",
+       "      <td>19.731501</td>\n",
+       "      <td>11.311164</td>\n",
+       "      <td>29.767591</td>\n",
+       "      <td>15.063486</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2001-07-25</th>\n",
+       "      <td>20.246233</td>\n",
+       "      <td>11.600365</td>\n",
+       "      <td>31.842102</td>\n",
+       "      <td>15.469897</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2001-07-26</th>\n",
+       "      <td>20.760965</td>\n",
+       "      <td>11.921707</td>\n",
+       "      <td>34.007645</td>\n",
+       "      <td>15.976391</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2001-07-27</th>\n",
+       "      <td>21.790426</td>\n",
+       "      <td>12.178778</td>\n",
+       "      <td>33.912827</td>\n",
+       "      <td>15.672087</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-12-13</th>\n",
+       "      <td>1065.000000</td>\n",
+       "      <td>41.450001</td>\n",
+       "      <td>1410.000000</td>\n",
+       "      <td>186.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-12-16</th>\n",
+       "      <td>1085.000000</td>\n",
+       "      <td>41.450001</td>\n",
+       "      <td>1385.000000</td>\n",
+       "      <td>182.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-12-17</th>\n",
+       "      <td>1075.000000</td>\n",
+       "      <td>42.549999</td>\n",
+       "      <td>1425.000000</td>\n",
+       "      <td>183.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-12-18</th>\n",
+       "      <td>1085.000000</td>\n",
+       "      <td>43.700001</td>\n",
+       "      <td>1420.000000</td>\n",
+       "      <td>184.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-12-19</th>\n",
+       "      <td>1070.000000</td>\n",
+       "      <td>43.000000</td>\n",
+       "      <td>1420.000000</td>\n",
+       "      <td>181.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5815 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    台積電         聯電          聯發科          鴻海\n",
+       "Date                                                       \n",
+       "2001-07-23    19.903187  11.343294    27.977854   15.367785\n",
+       "2001-07-24    19.731501  11.311164    29.767591   15.063486\n",
+       "2001-07-25    20.246233  11.600365    31.842102   15.469897\n",
+       "2001-07-26    20.760965  11.921707    34.007645   15.976391\n",
+       "2001-07-27    21.790426  12.178778    33.912827   15.672087\n",
+       "...                 ...        ...          ...         ...\n",
+       "2024-12-13  1065.000000  41.450001  1410.000000  186.500000\n",
+       "2024-12-16  1085.000000  41.450001  1385.000000  182.000000\n",
+       "2024-12-17  1075.000000  42.549999  1425.000000  183.000000\n",
+       "2024-12-18  1085.000000  43.700001  1420.000000  184.500000\n",
+       "2024-12-19  1070.000000  43.000000  1420.000000  181.000000\n",
+       "\n",
+       "[5815 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df3 = df2.pct_change().dropna()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>台積電</th>\n",
+       "      <th>聯電</th>\n",
+       "      <th>聯發科</th>\n",
+       "      <th>鴻海</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>台積電</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.599524</td>\n",
+       "      <td>0.434737</td>\n",
+       "      <td>0.487236</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>聯電</th>\n",
+       "      <td>0.599524</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.377357</td>\n",
+       "      <td>0.424866</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>聯發科</th>\n",
+       "      <td>0.434737</td>\n",
+       "      <td>0.377357</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.372232</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>鴻海</th>\n",
+       "      <td>0.487236</td>\n",
+       "      <td>0.424866</td>\n",
+       "      <td>0.372232</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          台積電        聯電       聯發科        鴻海\n",
+       "台積電  1.000000  0.599524  0.434737  0.487236\n",
+       "聯電   0.599524  1.000000  0.377357  0.424866\n",
+       "聯發科  0.434737  0.377357  1.000000  0.372232\n",
+       "鴻海   0.487236  0.424866  0.372232  1.000000"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df3.corr()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>台積電</th>\n",
+       "      <th>聯電</th>\n",
+       "      <th>聯發科</th>\n",
+       "      <th>鴻海</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2001-07-24</th>\n",
+       "      <td>-0.171686</td>\n",
+       "      <td>-0.032130</td>\n",
+       "      <td>1.789738</td>\n",
+       "      <td>-0.304299</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2001-07-25</th>\n",
+       "      <td>0.514732</td>\n",
+       "      <td>0.289201</td>\n",
+       "      <td>2.074511</td>\n",
+       "      <td>0.406411</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2001-07-26</th>\n",
+       "      <td>0.514732</td>\n",
+       "      <td>0.321342</td>\n",
+       "      <td>2.165543</td>\n",
+       "      <td>0.506494</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2001-07-27</th>\n",
+       "      <td>1.029461</td>\n",
+       "      <td>0.257071</td>\n",
+       "      <td>-0.094818</td>\n",
+       "      <td>-0.304304</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2001-07-30</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-12-13</th>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>-1.049999</td>\n",
+       "      <td>30.000000</td>\n",
+       "      <td>-2.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-12-16</th>\n",
+       "      <td>20.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-25.000000</td>\n",
+       "      <td>-4.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-12-17</th>\n",
+       "      <td>-10.000000</td>\n",
+       "      <td>1.099998</td>\n",
+       "      <td>40.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-12-18</th>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>1.150002</td>\n",
+       "      <td>-5.000000</td>\n",
+       "      <td>1.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-12-19</th>\n",
+       "      <td>-15.000000</td>\n",
+       "      <td>-0.700001</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-3.500000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5814 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  台積電        聯電        聯發科        鴻海\n",
+       "Date                                                \n",
+       "2001-07-24  -0.171686 -0.032130   1.789738 -0.304299\n",
+       "2001-07-25   0.514732  0.289201   2.074511  0.406411\n",
+       "2001-07-26   0.514732  0.321342   2.165543  0.506494\n",
+       "2001-07-27   1.029461  0.257071  -0.094818 -0.304304\n",
+       "2001-07-30   0.000000  0.000000   0.000000  0.000000\n",
+       "...               ...       ...        ...       ...\n",
+       "2024-12-13   5.000000 -1.049999  30.000000 -2.000000\n",
+       "2024-12-16  20.000000  0.000000 -25.000000 -4.500000\n",
+       "2024-12-17 -10.000000  1.099998  40.000000  1.000000\n",
+       "2024-12-18  10.000000  1.150002  -5.000000  1.500000\n",
+       "2024-12-19 -15.000000 -0.700001   0.000000 -3.500000\n",
+       "\n",
+       "[5814 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(df2 - df2.shift(1)).dropna()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
