--- a/lesson18/lesson18_1.ipynb
+++ b/lesson18/lesson18_1.ipynb
@@ -380,10 +380,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "station_df = pd.read_csv(csv_abs_files[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "info_path = os.path.join(stations_folder,'台鐵車站資訊.csv')\n",
+    "info_df = pd.read_csv(info_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merge_df = pd.merge(station_df, info_df,how='left',left_on='staCode',right_on='stationCode')"
+   ]
   }
  ],
  "metadata": {
