--- a/lesson18/lesson18_2.ipynb
+++ b/lesson18/lesson18_2.ipynb
@@ -996,10 +996,255 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "日期\n",
+       "2019-04-23    臺南市\n",
+       "2019-04-23    彰化縣\n",
+       "2019-04-23    南投縣\n",
+       "2019-04-23    南投縣\n",
+       "2019-04-23    南投縣\n",
+       "             ... \n",
+       "2023-12-31    彰化縣\n",
+       "2023-12-31    彰化縣\n",
+       "2023-12-31    彰化縣\n",
+       "2023-12-31    臺中市\n",
+       "2023-12-31    基隆市\n",
+       "Name: 地址, Length: 406761, dtype: object"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def first_third(val:str)->str:\n",
+    "    return val[:3]\n",
+    "\n",
+    "df3['地址'].map(first_third)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df3['縣市'] = df3['地址'].map(lambda v:v[:3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df3[\"年度\"] = df3.index.strftime('%Y')\n",
+    "df3['年月'] = df3.index.strftime('%Y-%m')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>縣市</th>\n",
+       "      <th>年度</th>\n",
+       "      <th>年月</th>\n",
+       "      <th>站名</th>\n",
+       "      <th>進站人數</th>\n",
+       "      <th>出站人數</th>\n",
+       "      <th>youbike</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>日期</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2019-04-23</th>\n",
+       "      <td>臺南市</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>2019-04</td>\n",
+       "      <td>永康</td>\n",
+       "      <td>2516</td>\n",
+       "      <td>2667</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-04-23</th>\n",
+       "      <td>彰化縣</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>2019-04</td>\n",
+       "      <td>源泉</td>\n",
+       "      <td>19</td>\n",
+       "      <td>21</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-04-23</th>\n",
+       "      <td>南投縣</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>2019-04</td>\n",
+       "      <td>濁水</td>\n",
+       "      <td>70</td>\n",
+       "      <td>63</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-04-23</th>\n",
+       "      <td>南投縣</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>2019-04</td>\n",
+       "      <td>龍泉</td>\n",
+       "      <td>8</td>\n",
+       "      <td>12</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-04-23</th>\n",
+       "      <td>南投縣</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>2019-04</td>\n",
+       "      <td>集集</td>\n",
+       "      <td>299</td>\n",
+       "      <td>127</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-12-31</th>\n",
+       "      <td>彰化縣</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>2023-12</td>\n",
+       "      <td>彰化</td>\n",
+       "      <td>19617</td>\n",
+       "      <td>16699</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-12-31</th>\n",
+       "      <td>彰化縣</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>2023-12</td>\n",
+       "      <td>花壇</td>\n",
+       "      <td>1864</td>\n",
+       "      <td>1532</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-12-31</th>\n",
+       "      <td>彰化縣</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>2023-12</td>\n",
+       "      <td>大村</td>\n",
+       "      <td>1315</td>\n",
+       "      <td>1100</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-12-31</th>\n",
+       "      <td>臺中市</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>2023-12</td>\n",
+       "      <td>頭家厝</td>\n",
+       "      <td>781</td>\n",
+       "      <td>778</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-12-31</th>\n",
+       "      <td>基隆市</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>2023-12</td>\n",
+       "      <td>暖暖</td>\n",
+       "      <td>576</td>\n",
+       "      <td>447</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>406761 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             縣市    年度       年月   站名   進站人數   出站人數  youbike\n",
+       "日期                                                        \n",
+       "2019-04-23  臺南市  2019  2019-04   永康   2516   2667        1\n",
+       "2019-04-23  彰化縣  2019  2019-04   源泉     19     21        0\n",
+       "2019-04-23  南投縣  2019  2019-04   濁水     70     63        0\n",
+       "2019-04-23  南投縣  2019  2019-04   龍泉      8     12        0\n",
+       "2019-04-23  南投縣  2019  2019-04   集集    299    127        0\n",
+       "...         ...   ...      ...  ...    ...    ...      ...\n",
+       "2023-12-31  彰化縣  2023  2023-12   彰化  19617  16699        1\n",
+       "2023-12-31  彰化縣  2023  2023-12   花壇   1864   1532        1\n",
+       "2023-12-31  彰化縣  2023  2023-12   大村   1315   1100        0\n",
+       "2023-12-31  臺中市  2023  2023-12  頭家厝    781    778        0\n",
+       "2023-12-31  基隆市  2023  2023-12   暖暖    576    447        0\n",
+       "\n",
+       "[406761 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df4 = df3.reindex(columns=['縣市','年度','年月','站名','進站人數','出站人數','youbike'])\n",
+    "df4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df4.to_csv('全台火車進出站資訊.csv')"
+   ]
   }
  ],
  "metadata": {
