--- a/lesson19/lesson19_4.ipynb
+++ b/lesson19/lesson19_4.ipynb
@@ -358,6 +358,244 @@
    "source": [
     "df1.groupby('吸煙者').apply(top)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>data1</th>\n",
+       "      <th>data2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-0.471459</td>\n",
+       "      <td>-0.065858</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-2.486125</td>\n",
+       "      <td>1.259857</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-0.277123</td>\n",
+       "      <td>1.011807</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.602243</td>\n",
+       "      <td>-0.179298</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.758415</td>\n",
+       "      <td>1.251068</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>995</th>\n",
+       "      <td>-0.371455</td>\n",
+       "      <td>0.328152</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>996</th>\n",
+       "      <td>1.605016</td>\n",
+       "      <td>-0.607962</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>997</th>\n",
+       "      <td>1.834905</td>\n",
+       "      <td>0.762297</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>998</th>\n",
+       "      <td>0.215006</td>\n",
+       "      <td>-0.791948</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>999</th>\n",
+       "      <td>-1.537639</td>\n",
+       "      <td>0.084611</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1000 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        data1     data2\n",
+       "0   -0.471459 -0.065858\n",
+       "1   -2.486125  1.259857\n",
+       "2   -0.277123  1.011807\n",
+       "3    0.602243 -0.179298\n",
+       "4    0.758415  1.251068\n",
+       "..        ...       ...\n",
+       "995 -0.371455  0.328152\n",
+       "996  1.605016 -0.607962\n",
+       "997  1.834905  0.762297\n",
+       "998  0.215006 -0.791948\n",
+       "999 -1.537639  0.084611\n",
+       "\n",
+       "[1000 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "frame = pd.DataFrame({'data1':np.random.randn(1000),\n",
+    "                      'data2':np.random.randn(1000)})\n",
+    "frame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "quartiles = pd.cut(frame.data1,4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_12090/2900926345.py:1: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
+      "  list(frame.data2.groupby(quartiles))\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[(Interval(-3.192, -1.483, closed='right'),\n",
+       "  1      1.259857\n",
+       "  21     1.275248\n",
+       "  23     1.551715\n",
+       "  38    -0.971085\n",
+       "  49     0.356503\n",
+       "           ...   \n",
+       "  910   -1.939854\n",
+       "  928    1.481541\n",
+       "  967   -1.788318\n",
+       "  969    1.122200\n",
+       "  999    0.084611\n",
+       "  Name: data2, Length: 61, dtype: float64),\n",
+       " (Interval(-1.483, 0.22, closed='right'),\n",
+       "  0     -0.065858\n",
+       "  2      1.011807\n",
+       "  5      0.587400\n",
+       "  7      0.226357\n",
+       "  11    -0.721074\n",
+       "           ...   \n",
+       "  985   -1.665679\n",
+       "  991    2.048901\n",
+       "  992   -0.922420\n",
+       "  995    0.328152\n",
+       "  998   -0.791948\n",
+       "  Name: data2, Length: 531, dtype: float64),\n",
+       " (Interval(0.22, 1.922, closed='right'),\n",
+       "  3     -0.179298\n",
+       "  4      1.251068\n",
+       "  6     -1.572928\n",
+       "  8     -0.782066\n",
+       "  9     -0.771282\n",
+       "           ...   \n",
+       "  990   -0.033777\n",
+       "  993   -0.053341\n",
+       "  994   -0.764939\n",
+       "  996   -0.607962\n",
+       "  997    0.762297\n",
+       "  Name: data2, Length: 374, dtype: float64),\n",
+       " (Interval(1.922, 3.624, closed='right'),\n",
+       "  56     1.564996\n",
+       "  103   -0.472834\n",
+       "  113   -1.213931\n",
+       "  143   -0.783869\n",
+       "  172   -0.858434\n",
+       "  248    0.217372\n",
+       "  274   -1.694838\n",
+       "  303    0.549506\n",
+       "  305   -0.113749\n",
+       "  313    1.060512\n",
+       "  320   -0.334835\n",
+       "  326    0.886844\n",
+       "  431   -0.145927\n",
+       "  446   -1.212957\n",
+       "  462   -2.413410\n",
+       "  471    0.481928\n",
+       "  505   -0.273080\n",
+       "  519    0.028356\n",
+       "  561    2.510588\n",
+       "  587   -0.907156\n",
+       "  662   -0.089378\n",
+       "  672    2.688434\n",
+       "  690   -0.360017\n",
+       "  711   -0.454387\n",
+       "  718   -1.111149\n",
+       "  723   -0.891541\n",
+       "  761    0.467613\n",
+       "  776    0.869269\n",
+       "  780    0.149972\n",
+       "  785    0.087722\n",
+       "  813   -0.287166\n",
+       "  868   -0.178072\n",
+       "  889    1.668288\n",
+       "  927   -0.401883\n",
+       "  Name: data2, dtype: float64)]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(frame.data2.groupby(quartiles))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
